Added navigation bar

--- a/css/recipes.css
+++ b/css/recipes.css
@@ -83,3 +83,24 @@ li {
   .row.contents {
     margin-left: 20px;
   }
+
+  /* Add a black background color to the top navigation */
+.topnav {
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: right;
+    color: lightcoral;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: lightcoral;
+    color: white;
+  }
